package app.com.server.enums;

public enum EventType {
    CONSULTATION,
    INTERVIEW,
    DOCTOR_APPOINTMENT,
    PERSONAL_TRAINING,
    TUTORING_SESSION,
    BUSINESS_MEETING,
    SALON_APPOINTMENT,
    MASSAGE,
    ROOM_RESERVATION,
    CAR_RENTAL,
    EQUIPMENT_RENTAL,
    DEMO_CALL,
    SUPPORT_SESSION,
    WORKSHOP_SESSION
}
